--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+
+.navbar {
+    box-shadow: 0 0 10px black;
+}
+
+.navbar-text {
+    position: absolute;
+    right: 10px;
+}
+
+.navbar-text li {
+    margin-right: 15px;
+}
+
+.container-fluid {
+    padding: 0 !important;
+}
+
+img.banner {
+    width: 100%;
+}
+div.banner {
+    width: 100%;
+    height: 50px;
+    background: #343a40;
+    line-height: 50px;
+    text-align: center;
+    color: white;
+    position: relative;
+    z-index: 1;
+    font-size: 20px;
+    box-shadow: 0 0 10px black;
+    text-shadow: 3px 3px 5px black;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+}
+
+div.price {
+    position: absolute;
+    right: 0;
+    background: #343a40;
+    color: white;
+    padding: 5px 10px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.oneline {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.card-body.content {
+    font-size: 13px;
+}
