--- a/src/styles.css
+++ b/src/styles.css
@@ -93,3 +93,22 @@ div.price {
     position: absolute;
     height: 100% !important;
 }
+
+.dropdown-menu {
+    background: lavender;
+    position: absolute !important;
+    width: 100%;
+}
+
+.nav-item.user {
+    font-size: 22px;
+    padding: 0 15px;
+}
+
+.navbar-collapse.show {
+    height: 60px;
+}
+
+.custom-select.is-invalid, .form-control.is-invalid, .was-validated .custom-select:invalid, .was-validated .form-control:invalid {
+    border-color: #dc3545 !important;
+}
