--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Auto Oferty</a>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" [routerLink]="'/'">Auto Oferty</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -15,16 +15,16 @@
                  </li>
             </ul>
             <ul class="navbar-nav" *ngIf="isLogged === true">
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown user">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        {{user.name}}<br /><small>{{user.email}}</small>
+                        <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        <small>{{user.name}}</small>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" [routerLink]="'/user'">Panel użytkownika</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#" (click)="logout()">Wyloguj się</a>
+                      <a class="dropdown-item" (click)="logout()">Wyloguj się</a>
                     </div>
                 </li>
           </ul>
