--- a/src/app/modules/user/main/main.component.html
+++ b/src/app/modules/user/main/main.component.html
@@ -5,8 +5,8 @@
         <div class="card-header">
             <ul class="nav nav-pills card-header-pills">
                 <!--account-settings-->
-                <li class="nav-item">
-                    <a class="nav-link" [ngClass]="{active: tab==='account-settings'}" (click)="changeTab('account-settings')">Ustawienia konta</a>
+                <li class="nav-item" (click)="changeTab('account-settings')">
+                    <a class="nav-link" [ngClass]="{active: tab==='account-settings'}">Ustawienia konta</a>
                 </li>
 
                 <!--add-offer-->
@@ -21,9 +21,10 @@
             </ul>
         </div>
         <div class="card-body">
-            <app-settings *ngIf="tab==='account-settings'"></app-settings>
-            <app-add-offer *ngIf="tab==='add-offer'"></app-add-offer>
-            <app-offer-list *ngIf="tab==='offer-list'"></app-offer-list>
+            <app-settings [hidden]="tab!=='account-settings'"></app-settings>
+            <app-add-offer [hidden]="tab!=='add-offer'"></app-add-offer>
+            <app-offer-list [hidden]="tab!=='offer-list'"></app-offer-list>
         </div>
+        <app-loader [visible]="loading"></app-loader>
     </div>
 </div>
