--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -9,17 +9,17 @@
     <div class="row">
         <div class="col-xl-3 col-md-3 col-sm-6">
             <ng-select (change)="onChangeBrand()" (clear)="onChangeBrand()" [disabled]="brands == null" [(ngModel)]="brand" placeholder="Wybierz markę">
-                <ng-option *ngFor="let item of brands" [value]="item.slug">{{item.name}}</ng-option>
+                <ng-option *ngFor="let item of brands" [value]="item.id">{{item.name}}</ng-option>
             </ng-select>
         </div>
         <div class="col-xl-3 col-md-3 col-sm-6">
             <ng-select (change)="onChangeModel()" (clear)="onChangeModel()" [disabled]="models == null" [(ngModel)]="model" placeholder="Wybierz model">
-                <ng-option *ngFor="let item of models" [value]="item.slug">{{item.name}}</ng-option>
+                <ng-option *ngFor="let item of models" [value]="item.id">{{item.name}}</ng-option>
             </ng-select>
         </div>
         <div class="col-xl-3 col-md-3 col-sm-6">
             <ng-select [disabled]="versions == null" [(ngModel)]="version" placeholder="Wybierz wersję">
-                <ng-option *ngFor="let item of versions" [value]="item.slug">{{item.name}}</ng-option>
+                <ng-option *ngFor="let item of versions" [value]="item.id">{{item.name}}</ng-option>
             </ng-select>
         </div>
         <div class="col-xl-3 col-md-3 col-sm-6">
