--- a/src/app/modules/user/components/add-offer/add-offer.component.html
+++ b/src/app/modules/user/components/add-offer/add-offer.component.html
@@ -163,7 +163,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-sm-6 text-left" *ngFor="let i of equipments">
-                            <input type="checkbox" [(ngModel)]="form.equipments[i.id]" name="eq_{{i.id}}"> {{i.value}}
+                            <input type="checkbox" [(ngModel)]="form.equipments[i.id]" name="eq_{{i.id}}"> {{i.name}}
                         </div>
                     </div>
                 </div>
@@ -174,6 +174,14 @@
                         <p-editor [(ngModel)]="form.description" name="desc" [style]="{'height':'320px'}"
                                   style="width: 100%;"></p-editor>
                     </div>
+                </div>
+
+                <div class="card-header">Zdjęcia:</div>
+                <div class="card-body" *ngIf="offerId > 0">
+                    <dropzone [config]="dropzoneConfig" [message]="'Click or drag images here to upload'" (success)="onUploadSuccess($event)" (removedFile)="onRemoveFile($event)"></dropzone>
+                </div>
+                <div class="card-body text-center" *ngIf="offerId === 0">
+                    Możliwość dodania zdjęćpojawi się po kliknięciu przycisku dodaj ofertę!
                 </div>
             </div>
 
