--- a/src/app/modules/user/main/main.component.html
+++ b/src/app/modules/user/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <br />
-    <h2><span class="badge badge-info" style="margin-bottom: 10px;">Panel użytkownika</span></h2>
+    <h2><span class="badge badge-info" style="margin-bottom: 10px;" [routerLink]="'/user'">Panel użytkownika</span></h2>
     <div class="card text-center" *ngIf="edit===0">
         <div class="card-header">
             <ul class="nav nav-pills card-header-pills">
@@ -23,7 +23,7 @@
         <div class="card-body">
             <app-settings [hidden]="tab!=='account-settings'"></app-settings>
             <app-add-offer [hidden]="tab!=='add-offer'"></app-add-offer>
-            <app-offer-list [hidden]="tab!=='offer-list'"></app-offer-list>
+            <app-offer-list [offers]="offers" [hidden]="tab!=='offer-list'"></app-offer-list>
         </div>
         <app-loader [visible]="loading"></app-loader>
     </div>
