--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -34,21 +34,21 @@
 </div>
 <div class="container-fluid">
   <div class="row" style="padding: 0 5% 0 5%; margin: 0;">
-    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" *ngFor="let a of [1,3,2,4,5,6,7,8,9,0,6,34]"
+    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" *ngFor="let offer of popularOffers"
          style="padding: 10px;">
       <div class="card">
-        <img class="card-img-top" src="assets/model.jpg" alt="Oferta">
-        <div class="price">22 152zł</div>
+        <img class="card-img-top" [src]="'/storage/' + offer.photo" alt="{{offer.name}}" style="height: 200px;">
+        <div class="price">{{offer.price}}zł</div>
         <div class="card-header oneline">
           <b>
-          Fiat 124 Spider
+          {{offer.name}}
           </b>
         </div>
         <div class="card-body content">
-            <b>Rodzaj paliwa:</b> Benzyna<br />
-            <b>Moc silnika:</b> 120 KM<br />
-            <b>Rok produkcji:</b> 2018<br />
-            <b>Przebieg:</b> 0 km<br />
+            <b>Rodzaj paliwa:</b> {{offer.fuelType}}<br />
+            <b>Moc silnika:</b> {{offer.enginePower}} KM<br />
+            <b>Rok produkcji:</b> {{offer.productionYear}}<br />
+            <b>Przebieg:</b> {{offer.meterStatus}} km<br />
         </div>
       </div>
     </div>
