--- a/src/app/modules/user/components/add-offer/add-offer.component.html
+++ b/src/app/modules/user/components/add-offer/add-offer.component.html
@@ -141,17 +141,19 @@
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-12">
+                            {{form.bodyColor}}
                             <ng-select [(ngModel)]="form.bodyColor" placeholder="Wybierz kolor karoserii"  [clearable]="false"
                                        [ngClass]="{'is-invalid': formErrors.bodyColor}"
-                                       name="gearbox">
+                                       name="bodycolor">
                                 <ng-option *ngFor="let item of colors" [value]="item">{{item}}</ng-option>
                             </ng-select>
                             <div class="invalid-feedback" *ngFor="let err of formErrors.bodyColor">{{err}}</div>
                         </div>
                         <div class="col-md-4 col-sm-12">
+                            {{form.bodyType}}
                             <ng-select [(ngModel)]="form.bodyType" placeholder="Wybierz rodzaj nadwozia" [clearable]="false"
                                        [ngClass]="{'is-invalid': formErrors.bodyType}"
-                                       name="gearbox">
+                                       name="bodytype">
                                 <ng-option *ngFor="let item of bodyTypes" [value]="item">{{item}}</ng-option>
                             </ng-select>
                             <div class="invalid-feedback" *ngFor="let err of formErrors.bodyType">{{err}}</div>
